@@ -1,26 +1,37 @@
-package client.rapid.util.module;
+package client.rapid.util.block;
 
 import client.rapid.util.MinecraftUtil;
-import client.rapid.util.block.BlockData;
 import net.minecraft.block.Block;
-import net.minecraft.client.Minecraft;
-import net.minecraft.util.*;
+import net.minecraft.util.BlockPos;
+import net.minecraft.util.EnumFacing;
 
 import java.util.List;
 
-public class ScaffoldUtil extends MinecraftUtil {
+public class BlockUtil extends MinecraftUtil {
 
-    // found this somewhere on github i forgor where
+    public static BlockPos getBlock(Block block, double range) {
+        for (double x = -range; x < range; ++x) {
+            for (double y = -range; y < range; ++y) {
+                for (double z = -range; z < range; ++z) {
+                    if(mc.theWorld.getBlockState(new BlockPos(mc.thePlayer.posX + x, mc.thePlayer.posY + y, mc.thePlayer.posZ + z)).getBlock() == block) {
+                        return new BlockPos(mc.thePlayer.posX + x, mc.thePlayer.posY + y, mc.thePlayer.posZ + z);
+                    }
+                }
+            }
+        }
+        return null;
+    }
+
     public static BlockData getBlockData(BlockPos pos, List<Block> invalid) {
         BlockPos pos1 = pos.add(-1, 0, 0),
-        pos2 = pos.add(1, 0, 0),
-        pos3 = pos.add(0, 0, 1),
-        pos4 = pos.add(0, 0, -1),
-        pos5 = pos.add(0, -1, 0),
-        pos6 = pos5.add(1, 0, 0),
-        pos7 = pos5.add(-1, 0, 0),
-        pos8 = pos5.add(0, 0, 1),
-        pos9 = pos5.add(0, 0, -1);
+                pos2 = pos.add(1, 0, 0),
+                pos3 = pos.add(0, 0, 1),
+                pos4 = pos.add(0, 0, -1),
+                pos5 = pos.add(0, -1, 0),
+                pos6 = pos5.add(1, 0, 0),
+                pos7 = pos5.add(-1, 0, 0),
+                pos8 = pos5.add(0, 0, 1),
+                pos9 = pos5.add(0, 0, -1);
 
         if (!invalid.contains(mc.theWorld.getBlockState((pos.add(0, -1, 0))).getBlock()))
             return new BlockData(pos.add(0, -1, 0), EnumFacing.UP);
